--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body{
       "footer footer footer footer"
   ;
   grid-template-rows: 100px 70px auto 70px;
+  grid-template-columns: 1fr 1fr 1fr 25%;
 }
 
 /*ESTILOS CABECERA*/
@@ -132,6 +133,16 @@ body{
   margin-right: 40px;
 }
 
+.form-group .mascara{
+  width: 150px;
+
+}
+
+.form-group .mascara img{
+  width: 150px;
+  
+}
+
 .articulo-item h3{
   font-size: 30px;
   
@@ -139,7 +150,7 @@ body{
 .articulo-item h3 a{
   text-decoration: none;
   color: black;
-  
+   
 }
 
 .articulo-item h3 a:hover{
@@ -160,6 +171,12 @@ body{
 
 }
 
+.jumbo .mascara{
+  width:100% ;
+  height: 150px;
+  overflow: hidden;
+}
+
 .jumgo h1{
   font-size: 35px;
   color: #444;
@@ -173,7 +190,8 @@ body{
 .button,
 button,
 input[type="submit"],
-input[type="button"]{
+input[type="button"],
+.edit{
   text-decoration: none;
   width: 100px;
   background: #0b70e1;
